<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/mainImg"
                    android:src="@drawable/login"
                    android:layout_width="wrap_content" android:layout_height="134dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/textviewlyaout"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/mainImg">
                <TextView
                        android:id="@+id/textview1"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/loginTv1"
                        android:gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        tools:layout_editor_absoluteY="272dp" tools:layout_editor_absoluteX="0dp"/>
                <TextView
                        android:id="@+id/textview2"
                        android:gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/loginTv2"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        tools:layout_editor_absoluteY="307dp" tools:layout_editor_absoluteX="0dp"/>
            </LinearLayout>
            <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/etlayout" app:layout_constraintEnd_toEndOf="parent"
                    android:padding="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textviewlyaout"
            >

                <EditText
                        android:id="@+id/et1"
                        android:layout_width="match_parent" android:layout_height="wrap_content"/>
                <EditText
                        android:drawableLeft="@drawable/password_icon"
                        android:id="@+id/et2"
                        android:layout_width="match_parent" android:layout_height="wrap_content"/>

            </LinearLayout>
            <RelativeLayout
                    android:id="@+id/term"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/etlayout">
                <TextView
                        android:id="@+id/termTv"
                        android:text="@string/termTv"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                />
                <ImageButton
                        android:id="@+id/termCheck"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="clip_vertical"
                        android:background="@drawable/unchecked_normal"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                />
            </RelativeLayout>

            <Button android:id="@+id/login"
                    android:text="@string/buttonLogin"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottom"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/term"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:id="@+id/linearLayoutBottom" app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                          app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                        android:id="@+id/idfind"
                        android:gravity="center"
                        android:text="@string/BottomTv1"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <TextView
                        android:layout_marginBottom="20dp"
                        android:id="@+id/autologin"
                        android:text="@string/BottomTv2"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>


            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>